<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/rename_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_2dp"
    android:orientation="vertical">

    <TextView
		    android:id="@+id/popup_text"
            android:layout_width="match_parent"
		    android:layout_height="@dimen/height_title_popup_menu"
            android:text="@string/rename"
            android:textSize="@dimen/text_header_popup_window"
            android:paddingTop="@dimen/padding_top_header_text_popup_window"
            android:paddingHorizontal="@dimen/padding_horizontal_header_text_popup_window"
            android:textStyle="bold" android:autoSizeTextType="uniform"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:focusable="true"
            android:text=""
            android:paddingHorizontal="@dimen/padding_horizontal_header_text_popup_window"
            android:ems="50"
            android:id="@+id/input_name"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:minHeight="@dimen/min_height_edit_text"
            android:autofillHints=""
            android:hint="@string/hint"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

        <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="@style/MyButtonStyle"/>
        <View
		        android:layout_width="@dimen/width_border_line_vertical"
                android:layout_height="match_parent"
		        android:layout_gravity="center_vertical"
		        android:layout_marginVertical="@dimen/layout_margin_vertical_border_line_vertical"
                android:background="@color/black"/>

        <Button
                android:id="@+id/OK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/OK"
                style="@style/MyButtonStyle"/>
    </LinearLayout>

</LinearLayout>