<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/renameView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/rename"
            android:textSize="@dimen/text_header_popup_window"
            android:paddingTop="@dimen/padding_top_header_text_popup_window"
            android:paddingHorizontal="@dimen/padding_horizontal_header_text_popup_window"
            android:textStyle="bold" android:autoSizeTextType="uniform"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:paddingHorizontal="@dimen/padding_horizontal_header_text_popup_window"
            android:ems="50"
            android:id="@+id/newName" style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:minHeight="48dp"
            android:hint="@string/hint"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

        <Button
                android:id="@+id/cancel_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_horizontal_header_text_popup_window"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_context_menu"
                style="@style/Widget.Material3.Button.TextButton.Icon" android:autoSizeTextType="uniform"/>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:layout_marginHorizontal="3dp"
                android:background="@color/black"/>

        <Button
                android:id="@+id/OK"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_horizontal_header_text_popup_window"
                android:text="@string/OK"
                android:textSize="@dimen/text_size_context_menu"
                style="@style/Widget.Material3.Button.TextButton.Icon" android:autoSizeTextType="uniform"/>
    </LinearLayout>

</LinearLayout>