<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="bottom">

	<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/editors"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>

	<CheckBox
		android:id="@+id/check_box"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/fill_in_the_selection"
		app:layout_constraintTop_toBottomOf="@id/editors"
		app:layout_constraintStart_toStartOf="parent"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal"
			app:layout_constraintTop_toBottomOf="@id/check_box"
			app:layout_constraintStart_toStartOf="parent">

		<Button
				android:id="@+id/cancel_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/cancel"
				style="@style/MyButtonStyle"/>
		<View
				android:layout_width="@dimen/width_border_line_vertical"
				android:layout_height="match_parent"
				android:layout_gravity="center_vertical"
				android:layout_marginVertical="@dimen/layout_margin_vertical_border_line_vertical"
				android:background="@color/black"/>

		<Button
				android:id="@+id/OK"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/OK"
				android:clickable="false"
				style="@style/MyButtonStyle"/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>