<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/contextMenu"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

	<Button
			android:id="@+id/copy_file"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_button_context_menu"
			android:background="#00FFFFFF"
			android:text="@string/copy_file"
			android:textColor="@color/white"
			android:textAlignment="viewStart"
			android:textSize="@dimen/text_size_context_menu"
			style="@style/Widget.Material3.Button.TextButton"/>

	<View
			android:layout_width="@dimen/width_dividing_line"
			android:layout_height="@dimen/height_dividing_line"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/dividing_line"/>

	<Button
			android:id="@+id/print"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_button_context_menu"
			android:background="#00FFFFFF"
			android:text="@string/print_or_export_in_pdf"
			android:textColor="@color/white"
			android:textAlignment="viewStart"
			android:textSize="@dimen/text_size_context_menu"
			style="@style/Widget.Material3.Button.TextButton"/>

	<View
			android:layout_width="@dimen/width_dividing_line"
			android:layout_height="@dimen/height_dividing_line"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/dividing_line"/>

	<Button
			android:id="@+id/information"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_button_context_menu"
			android:background="#00FFFFFF"
			android:text="@string/information"
			android:textColor="@color/white"
			android:textAlignment="viewStart"
			android:textSize="@dimen/text_size_context_menu"
			style="@style/Widget.Material3.Button.TextButton"/>

	<View
			android:layout_width="@dimen/width_dividing_line"
			android:layout_height="@dimen/height_dividing_line"
			android:layout_gravity="center_horizontal"/>
</LinearLayout>